Updated project and action

--- a/NINA.Plugin.GNS/NINA.Plugin.GNS.csproj
+++ b/NINA.Plugin.GNS/NINA.Plugin.GNS.csproj
@@ -1,6 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
+	<Title>GNS Plugin</Title>
+	<Product>NINA.Plugin.GNS</Product>
+	<Company>Nick Hardy</Company>
+	<TargetFramework>net8.0-windows</TargetFramework>
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <UseWPF>true</UseWPF>
