--- a/.github/workflows/github-action.yaml
+++ b/.github/workflows/github-action.yaml
@@ -83,7 +83,7 @@ jobs:
 
       - name: Copy manifest file
         run: |
-          cp ./${{ env.PLUGIN_DLL_NAME }}.${{ github.ref_name }}.manifest.json ./nina.plugin.manifests/manifests/${{ env.PLUGIN_MANIFEST_PATH }}
+          cp ./${{ env.PLUGIN_DLL_NAME }}.${{ github.ref_name }}.manifest.json './nina.plugin.manifests/manifests/${{ env.PLUGIN_MANIFEST_PATH }}'
           cd nina.plugin.manifests
           git add .
           git commit -m "Add manifest for release ${{ github.ref_name }}"
